# slitherlink-maker

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: internal_state_tests.yml
src/: main.py  simple_6_by_6_lines.py
src/slitherlinking/: main.py  slitherlink_internal_state.py
src/visuals/: colours.py  text_button.py
tests/: conftest.py  test_the_internal_grid_state.py  tests_the_project.py
