[metadata]
name = slitherlinking
description = Creation of Slitherlink Puzzles
author = Pavol Kollár
license = GPL-3.0 License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    slitherlinking
install_requires =
    pygame>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
